[package]
name = "minesweeper-tutorial"
version = "0.1.0"
edition = "2021"

[features]
debug = ["board_plugin/debug", "bevy-inspector-egui"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.12.0"

board_plugin = { path = "board_plugin" }
bevy-inspector-egui = { version = "0.21.0", optional = true }

[workspace]
members = [
    "board_plugin"
]